--- a/app/src/main/res/values/fragments.xml
+++ b/app/src/main/res/values/fragments.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="fragment_main">1</integer>
+    <integer name="fragment_twister">2</integer>
 </resources>
